parser/tests/Insert.test
#   Copyright 2011-2015 Quickstep Technologies LLC.
#   Copyright 2015 Pivotal Software, Inc.
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

insert into test (attr1, attr2) values (1, 2)
--
ERROR: list of column names in INSERT statement is not supported yet (1 : 18)
insert into test (attr1, attr2) values (1, 2)
                 ^
==

insert into test values (1, -2, 3)
--
InsertStatement[relation_name=test]
+-tuple=
  +-Literal
  | +-NumericLiteral[numeric_string=1,float_like=false]
  +-Literal
  | +-NumericLiteral[numeric_string=-2,float_like=false]
  +-Literal
    +-NumericLiteral[numeric_string=3,float_like=false]
==

insert into test values (1+1, 2*2, 3+1)
--
ERROR: syntax error (1 : 27)
insert into test values (1+1, 2*2, 3+1)
                          ^
==

insert into test values (e'\'sdfs')
--
InsertStatement[relation_name=test]
+-tuple=
  +-Literal
    +-StringLiteral[value='sdfs]
==

insert into test values ('\'sdfs')
--
ERROR: syntax error (1 : 29)
insert into test values ('\'sdfs')
                            ^
